[tool.poetry]
name = "generative_his"
version = "0.0.1"
description = "A naive channel content generation"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "generative_his"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"